php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #47831 Compile warning for strnlen() in main/spprintf.c (missing #define _GNU_SOURCE)
Submitted: 2009-03-29 20:00 UTC Modified: 2009-03-30 19:59 UTC
From: rainer dot jung at kippdata dot de Assigned:
Status: Closed Package: Compile Warning
PHP Version: 5.2.9 OS: Linux
Private report: No CVE-ID: None
 [2009-03-29 20:00 UTC] rainer dot jung at kippdata dot de
Description:
------------
PHP 5.2.9 does auto detection for strnlen(). On Linux the detection results in strnlen() availability.

The function is only available, when _GNU_SOURCE is defined though. File main/spprintf.c uses it without _GNU_SOURCE in PHP 5.2.9.

This is due to an incomplete backport from MAIN and 5.3.

See 

http://cvs.php.net/viewvc.cgi/php-src/main/spprintf.c?r1=1.25.2.2.2.10.2.4&r2=1.25.2.2.2.10.2.5
and
http://cvs.php.net/viewvc.cgi/php-src/main/spprintf.c?r1=1.53&r2=1.54&

and compare with

http://cvs.php.net/viewvc.cgi/php-src/main/spprintf.c?r1=1.25.2.2.2.14&r2=1.25.2.2.2.15

Patch:

--- main/spprintf.c      2009-02-04 16:03:12.000000000 +0100
+++ main/spprintf.c      2009-03-29 21:58:10.000000000 +0200
@@ -76,6 +76,7 @@
  * SIO stdio-replacement strx_* functions by Panos Tsirigotis
  * <panos@alumni.cs.colorado.edu> for xinetd.
  */
+#define _GNU_SOURCE
 #include "php.h"

 #include <stddef.h>



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-03-30 19:59 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC