Fixed bug #47831 (Compile warning for strnlen() in main/spprintf.c)

# Patch by rainer\ dot\ jung\ at\ kippdata\ dot\ de